<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ListAlbumsFragment">
    <!-- App Bar Layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Collapsing Toolbar Layout -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Imagen del álbum -->
            <ImageView
                android:id="@+id/image_detail_cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <!-- Barra de herramientas -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Descripción y Género -->
            <TextView
                android:id="@+id/detail_album_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:justificationMode="inter_word"
                android:text="Descripción y Género" />

            <TextView
                android:id="@+id/detail_album_fecha_lanzamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:text="fecha de lanzamiento" />

            <TextView
                android:id="@+id/detail_album_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:padding="10dp"
                android:layout_marginLeft="15dp"
                android:text="genero"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:text="Canciones" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nertedScrollViewId"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTracks"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="150dp"
                    app:layout_constraintHeight_default="wrap" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_track"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="+"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_button_add_album"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="10dp"
                android:text="@string/add_track"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
