<resources>
    <string name="app_name">Vinyls</string>
    <string name="dd_mm_aaaa">DD-MM-AAAA</string>
    <string name="musical_genre">Género</string>
    <string name="imagen_go_to_artista">imagen go to artista</string>
    <string name="imagen_go_to_collectors">imagen go to collectors</string>
    <string name="imagen_go_to_albums">imagen go to albums</string>
    <string name="imagen_logo_vinyls">logo vinyls</string>
    <string name="imagen_album_cover">album cover</string>
    <string name="imagen_collector_album">imagen del coleccionista</string>
    <string name="imagen_cover_artist">imagen del artista</string>
    <string name="release_date">Fecha de lanzamiento:</string>
    <string name="duracion">Duración:</string>
    <string name="write_your_name">Escribe tu nombre</string>
    <string name="write_your_review">Escribe tu reseña</string>
    <string name="save_button_track">Boton guardar track</string>
    <string name="save_button_album">Boton guardar album</string>
    <string name="write_your_duration">Escribe la duracion</string>
    <string name="name">Nombre:</string>
    <string name="cover_image">Url del cover</string>
    <string name="album_review">Reseña del álbum</string>
    <string name="loading">Loading</string>
    <string name="create_album_record_label">Estudio de grabación</string>
    <string name="menu_home">Home</string>
    <string name="menu_albums">Álbumes</string>
    <string name="detalle_albums">Detalle Album</string>
    <string name="detalle_performers">Detalle Artistas</string>
    <string name="app_bar_collectors">Coleccionistas</string>
    <string name="menu_artists">Artistas</string>
    <string name="menu_detail_collector">Coleccionista</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="list_albums_label">Listado de álbumes</string>
    <string name="order_name_label">Nombre</string>
    <string name="add_album">Agregar álbum</string>
    <string name="add_track">Agregar canción</string>
    <string name="main_label">Vinilos</string>
    <string name="visitor_label">Visitante</string>
    <string name="collector_label">Coleccionista</string>
    <string name="album_created_successful">Álbum creado exitosamente</string>
    <string name="track_created_successful">Track creado exitosamente</string>
    <string name="error_creating_album">Error al crear álbum</string>
    <string name="error_creating_track">Error al crear track</string>
    <string name="error_required_field_and_not_empty">Campo requerido y no puede ser vacío</string>
    <string name="error_spinner_required">Campo requerido y debe seleccionar un elemento</string>
    <string name="error_malformed_url">Formato incorrecto. Ej: https://mi-dominio.com</string>
    <string name="error_longitd_duracion">La longitud de la duración no puede ser menor a cuatro</string>
    <string name="error_date_before">La fecha seleccionada no puede ser mayor a la fecha actual</string>
    <string name="EDIT_TEXT_TYPE_URL">URL</string>
    <string name="EDIT_TEXT_TYPE_TEXT">TEXT</string>
    <string name="title_fragment_create_album">Crear Álbum</string>
    <string name="title_fragment_asociar_track">Asociar Track</string>
    <string name="filter_album">Buscar álbumes...</string>
    <string name="app_bar_performers">Artistas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_records_display">No hay información para mostrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connectivity">No hay conexión a Internet, por favor conectarse para actualizar la información</string>
</resources>