...
        <!-- Label principal -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.uniandes.vinyls.ui.components.CustomTextView
                android:id="@+id/listado_albumes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_albums_label"
                android:textSize="33sp"
                android:layout_marginBottom="20dp" />
            <View
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAlbums"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

...
